main.tf
provider "aws"{
    region = "us-east-2"
    version = "~> 3.0"
    access_key = "AKIA6KZQ3UPJ6DCO755Y"
    secret_key = "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"
}
resource "aws_instance" "adi_instance"{
    ami = "ami-0233c2d874b811deb"
    instance_type = "t2.micro"
    security_groups = [aws_security_group.adi_sg.name]
}

resource "aws_eip" "adi_eip"{
    instance = aws_instance.adi_instance.id
}
resource "aws_security_group" "adi_sg"{
    name = "Allow https"
    ingress{
        from_port = 443
        to_port = 443 
        protocol = "TCP"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        from_port = 443
        to_port = 443 
        protocol = "TCP"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
output "EIP"{
value = aws_eip.adi_eip.public_ip
}
